--- a/debian/control.in
+++ b/debian/control.in
@@ -27,7 +27,7 @@ Description: @vendor@ Java(TM) Runtime Environment (JRE) @RELEASE@ (architecture
 
 Package: @basename@-bin
 Section: non-free/java
-Architecture: amd64 i386
+Architecture: amd64
 Depends: @basename@-jre (>= ${source:Version}), ${odbc:Depends}, ${shlibs:Depends}, ${misc:Depends}
 Recommends: ${shlibs:Recommends}
 Suggests: binfmt-support
@@ -43,7 +43,7 @@ Description: @vendor@ Java(TM) Runtime Environment (JRE) @RELEASE@ (architecture
  This package contains architecture dependent files.
 
 Package: @basename@-plugin
-Architecture: amd64 i386
+Architecture: amd64
 Section: non-free/web
 Priority: optional
 Depends: ${shlibs:Depends}, ${misc:Depends}, @basename@-bin (>= ${source:Version}), @browsers@
@@ -85,7 +85,7 @@ Description: Lucida TrueType fonts (from the @vendor@ JRE)
  This package makes the fonts available to system.
 
 Package: @basename@-jdk
-Architecture: amd64 i386
+Architecture: amd64
 Depends: @basename@-bin (>= ${source:Version}), ${shlibs:Depends}, ${misc:Depends}
 Suggests: default-jdk-doc, @basename@-source
 Provides: java-compiler, java2-compiler, java-sdk, java2-sdk, java5-sdk, java6-sdk
